envoy.yaml
admin:
  # Descomentar linha abaixo para logs detalhados
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: grpc_json
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_services
                      domains:
                      - "*"
                      typed_per_filter_config:
                        envoy.filters.http.cors:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                          allow_methods: "GET, POST, PUT, DELETE, OPTIONS"
                          allow_origin_string_match:
                            - safe_regex:
                                regex: .*
                      routes:
                        - match: 
                            prefix: /grpc.UsuariosExternos
                          route:
                            cluster: gRPC_service
                        - match: 
                            prefix: /grpc.Perfis
                          route:
                            cluster: gRPC_service
                        - match: 
                            prefix: /grpc.Permissoes
                          route:
                            cluster: gRPC_service
                        - match: 
                            prefix: /grpc.UsuariosInternos
                          route:
                            cluster: gRPC_service
                        - match:
                            prefix: /si-admin/api/
                          route:
                            cluster: gRPC_service
                          typed_per_filter_config:
                            envoy.filters.http.cors:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                              allow_methods: "GET, POST, PUT, DELETE, OPTIONS"
                              allow_headers: "Content-Type, Authorization"
                              allow_origin_string_match:
                                - safe_regex:
                                    regex: http://localhost:3000
                                - safe_regex:
                                    regex: http://localhost:5500
                                - safe_regex:
                                    regex: http://192.168.1.14:3000
                              allow_credentials: true
                http_filters:
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.grpc_json_transcoder
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                    proto_descriptor: app/model/grpc/descriptor.pb
                    services:
                      - grpc.UsuariosExternos
                      - grpc.Perfis
                      - grpc.Permissoes
                      - grpc.UsuariosInternos
                    convert_grpc_status: true
                    print_options:
                      add_whitespace: true
                      always_print_primitive_fields: true
                      always_print_enums_as_ints: false
                      preserve_proto_field_names: false
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: gRPC_service
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: gRPC_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      # Produção
                      # address: localhost
                      # Desenvolvimento
                      address: si-admin-app-1
                      port_value: 8601

# Descomentar trecho abaixo para logs detalhados
node:
  id: envoy_node
  cluster: envoy_cluster
